--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <header>
         <div class="container">
             <div class="logo">
-                <img src="/images/logo-remove-background.png" alt="Logo">
+                <img src="./images/logo-remove-background.png" alt="Logo">
             </div>
 
             <div class="buscar">
