--- a/index.html
+++ b/index.html
@@ -34,21 +34,21 @@
     <main>
         <section class="banner-product">
             <div class="banner-item">
-                <img src="/images/gatorade.png" alt="Gatorade de Morango">
+                <img src="./images/gatorade.png" alt="Gatorade de Morango">
                 <p class="banner-text">Gatorade de Morango</p>
                 <div class="promo-label">Promoção</div>
                 <p class="price">R$ 4,99</p>
                 <button class="buy-button">Comprar</button>
             </div>
             <div class="banner-item">
-                <img src="/images/ruffles.png" alt="Ruffles Original">
+                <img src="./images/ruffles.png" alt="Ruffles Original">
                 <p class="banner-text">Ruffles Original</p>
                 <div class="promo-label">Promoção</div>
                 <p class="price">R$ 5,49</p>
                 <button class="buy-button">Comprar</button>
             </div>
             <div class="banner-item">
-                <img src="/images/trakinas.png" alt="Trakinas Chocolate">
+                <img src="./images/trakinas.png" alt="Trakinas Chocolate">
                 <p class="banner-text">Trakinas Chocolate</p>
                 <div class="promo-label">Promoção</div>
                 <p class="price">R$ 3,79</p>
@@ -59,37 +59,37 @@
 
         <div class="products">
             <section>
-                <img src="/images/aguamineral500ml.png" alt="Água Mineral">
+                <img src="./images/aguamineral500ml.png" alt="Água Mineral">
                 <p>Água Mineral 500ml</p>
                 <p class="price">R$ 1,99</p>
                 <button class="buy-button">Comprar</button>
             </section>
             <section>
-                <img src="/images/cocacola350ml.png" alt="Coca-Cola">
+                <img src="./images/cocacola350ml.png" alt="Coca-Cola">
                 <p>Coca-Cola 350ml</p>
                 <p class="price">R$ 3,49</p>
                 <button class="buy-button">Comprar</button>
             </section>
             <section>
-                <img src="/images/filtrodepapel.png" alt="Filtro de Papel">
+                <img src="./images/filtrodepapel.png" alt="Filtro de Papel">
                 <p>Filtro de Papel</p>
                 <p class="price">R$ 2,99</p>
                 <button class="buy-button">Comprar</button>
             </section>
             <section>
-                <img src="/images/leitesantaclara.png" alt="Leite Santa Clara">
+                <img src="./images/leitesantaclara.png" alt="Leite Santa Clara">
                 <p>Leite Santa Clara</p>
                 <p class="price">R$ 4,89</p>
                 <button class="buy-button">Comprar</button>
             </section>
             <section>
-                <img src="/images/monstermangoloco.png" alt="Monster Mango Loco">
+                <img src="./images/monstermangoloco.png" alt="Monster Mango Loco">
                 <p>Monster Mango Loco</p>
                 <p class="price">R$ 7,99</p>
                 <button class="buy-button">Comprar</button>
             </section>
             <section>
-                <img src="/images/sucrilhos.png" alt="Sucrilhos">
+                <img src="./images/sucrilhos.png" alt="Sucrilhos">
                 <p>Sucrilhos</p>
                 <p class="price">R$ 8,49</p>
                 <button class="buy-button">Comprar</button>
